tests/baselines/reference/abstractAsync.errors.txt
tests/cases/compiler/abstractAsync.ts(2,9): error TS1243: 'async' modifier cannot be used with 'abstract' modifier.


==== tests/cases/compiler/abstractAsync.ts (1 errors) ====
    abstract class ShouldFailClass {
      async abstract badMethod(): Promise<number>;
            ~~~~~~~~
!!! error TS1243: 'async' modifier cannot be used with 'abstract' modifier.
    }